# esp32s3n1

./: .gitignore  Cargo.toml  cfg.toml.example  rust-toolchain.toml
.cargo/: config.toml
src/: app_state.rs  main.rs  rgb_led.rs  utils.rs  web.rs  wifi.rs
